<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CubScout-Admin</string>
    <string name="score_title_label_text">(Section) Title</string>
    <string name="score_paragraph_label_text">Paragraph Text</string>
    <string name="score_field_name_label_text">Field Name</string>
    <string name="score_field_type_label_text">Score Type</string>
    <string name="score_field_nullable_label_text">Nullable</string>
    <string name="add_score_field_button_text">Add</string>
    <string name="add_score_field_popup_text">Add score metric</string>
    <string name="game_name_field_label_text">Game Name</string>
    <string name="add_score_title_popup_text">Section Title</string>
    <string name="add_score_paragraph_popup_text">Paragraph</string>
    <string name="null_when_label_text">Null When Checkbox is</string>
    <string name="game_type_field_labe_text">Game Type</string>
    <string name="game_year_field_label_text">Year</string>
    <string name="launch_game_manager_button_text">Manage Games</string>
    <string-array name="scored_field_type_spinner_options">
        <item>Count</item>
        <item>Rating</item>
    </string-array>
    <string-array name="nullable_spinner_options">
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <integer name="is_nullable_index">1</integer>
    <!-- indices of values must match the indices of corresponding values in scored_field_type_spinner_options -->
    <string-array name="scored_field_type_json_options" translatable="false">
        <item>Count</item>
        <item>Rating</item>
    </string-array>
    <string-array name="null_when_spinner_options">
        <item>Checked</item>
        <item>Unchecked</item>
    </string-array>
    <string-array name="game_types">
        <item>FRC</item>
        <item>FTC</item>
    </string-array>
</resources>