<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:rowCount="5"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <FrameLayout
        android:id="@+id/null_checkbox_settings_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_columnWeight="1"
        android:layout_columnSpan="2"
        android:layout_row="4"
        android:layout_column="1"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/score_name_field"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        tools:ignore="UnusedAttribute" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/key_type_spinner"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_marginLeft="5dp"
        tools:ignore="RtlHardcoded,UnusedAttribute" />

    <TextView
        android:text="@string/score_field_name_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView21"
        android:labelFor="@id/game_name_field"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_row="0"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        tools:ignore="UnusedAttribute" />

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/up_button"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_rowSpan="2"
        android:background="@android:drawable/arrow_up_float"
        android:minWidth="24dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="fill"
        tools:ignore="RtlHardcoded" />
    <Button
        android:layout_width="wrap_content"
        android:id="@+id/down_button"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_rowSpan="2"
        android:layout_marginRight="10dp"
        android:layout_gravity="fill"
        android:background="@android:drawable/arrow_down_float"
        android:minWidth="24dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:text="@string/score_field_nullable_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView31"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_marginLeft="10dp"
        tools:ignore="RtlHardcoded" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nullable_spinner"
        android:layout_row="3"
        android:layout_column="2"
        android:layout_marginLeft="5dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:text="@string/score_field_type_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/key_type_label"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnWeight="1"
        tools:ignore="UnusedAttribute" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/remove_button"
        android:layout_row="0"
        android:layout_column="3"
        android:layout_rowSpan="4"
        android:background="@android:drawable/ic_delete"
        android:layout_gravity="right|center_vertical"
        tools:ignore="RtlHardcoded" />

</GridLayout>